--- a/index.html
+++ b/index.html
@@ -66,20 +66,21 @@
                 <div class="sub-menu col">
                     <p class="address"><i class="fa fa-map-marker" aria-hidden="true"></i> 54/20 Diệp Minh Châu, P.Tân
                         Sơn Nhì, Q.Tân Phú</p>
-                    <a href="tel:0902340717" class="hotline"><i class="fa fa-phone"
-                            aria-hidden="true"></i>0902340717</a>
+                    <a href="tel:0973980399" class="hotline"><i class="fa fa-phone"
+                            aria-hidden="true"></i>0973980399</a>
                 </div>
             </div>
         </div>
     </header>
     <div class="page-content">
         <section class="form-dangky">
-
-            <div class="container">
-                <div class="row form-wrap">
-                    <h1>đăng ký trở thành tài xế grabcar ngay hôm nay.<br>đăng ký xe mới hợp tác tăng thêm thu nhập hấp dẫn.<br>
-                        <p>để được tư vấn hỗ trợ trực tuyến: TPHCM - BIÊN HÒA - BÌNH DƯƠNG - LONG AN <a href="tel:0902340717">0902340717</a></p>
-                    </h1>
+            <div class="form-wrap">
+                <div class="shadowh1">
+                    <h1>ĐĂNG KÝ GRABCAR NGAY<br>HÔM NAY</h1>
+                    <p>thu nhập lên tới<span>35 triệu</span>NẾU CHẠY TOÀN THỜI GIAN</p>
+                </div>
+                <div class="container">
+                    <div class="row">
                     <div id="dang-ky">
                         <form autocomplete="off" id="form-dang-ky" >
                             <h2 class="main-color">Đăng Ký Thông Tin Tiếp Nhận</h2>
@@ -130,15 +131,16 @@
                             </div>
                         </form>
                     </div>
+                    </div>
                 </div>
-            </div>
+                </div>
 
         </section>
         <section class="block-intro">
             <div class="container">
                 <div class="row">
                     <div class="left">
-                        <h2 class="main-color">CHƯƠNG TRÌNH ĐĂNG KÝ GRABCAR TẠI HCM VÀ CÁCH TỈNH LÂN CẬN</h2>
+                        <h2 class="main-color">CHƯƠNG TRÌNH ĐĂNG KÝ GRABCAR TẠI CẦN Thơ</h2>
                         <P>Là chương trình hỗ trợ các Bác tài đăng ký Hợp tác xã xin Phù hiệu Xe hợp đồng để hoàn tất thủ tục đăng ký hoạt động Grab Car khu vực TP. HCM và các tỉnh lân cận</P>
                         <P class="text-danger"><strong>Phí đăng ký HTX chi phí bao gồm:</strong></p>
                             <ul>
@@ -166,7 +168,7 @@
                     </div>
                     <div class="col-md-6 col-xs-12 intro-right">
                         <p>Hotline hỗ trợ</p>
-                        <p><i class="fa fa-phone" aria-hidden="true"></i>0902340717
+                        <p><i class="fa fa-phone" aria-hidden="true"></i>0973980399
                         <a href="#dang-ky" class="btn btn-light btn-lg">Liên Hệ</a></p>
                     </div>
                 </div>
@@ -351,7 +353,7 @@
                     <div class="col-md-3 col-xs-12 step --step2">
                         <img src="public/images/icon4.png" alt="CÔNG VIỆC HỢP PHÁP">
                         <h3 class="main-color">HỖ TRỢ NHANH CHÓNG VÀ LIÊN TỤC</h3>
-                        <p>Đội ngũ nhân viên GrabCar luôn sẵn sàng hỗ trợ bạn nhiệt tình và tận tuỵ mọi thời điểm trong ngày. Liên hệ: (0902340717)
+                        <p>Đội ngũ nhân viên GrabCar luôn sẵn sàng hỗ trợ bạn nhiệt tình và tận tuỵ mọi thời điểm trong ngày. Liên hệ: (0973980399)
                             <a href="#" id="dang-ky" class="btn btn-success mt-2 btn-lg">Đăng ký ngay</a>
                         </p>
                     </div>
@@ -564,7 +566,7 @@
                     </div>
                 </div>
                 <div class="col-md-12 col-xs-12 mt-5 font-weight-bold text-center">
-                    <p>mọi thắc mắc hoặc yêu cầu hỗ trợ quý khách vui lòng liên hệ HOTLINE: <a href="tel:0902340717">0902340717</a></p>
+                    <p>mọi thắc mắc hoặc yêu cầu hỗ trợ quý khách vui lòng liên hệ HOTLINE: <a href="tel:0973980399">0973980399</a></p>
                 </div>
             </div>
         </div>
