--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <!-- Google / Search Engine Tags -->
     <meta itemprop="name" content="Taxi Công Nghệ">
     <meta itemprop="description" content="">
-    <meta itemprop="image" content="http://taxicongnghe.net/images/logo.jpg">
+    <meta itemprop="image" content="http://taxicongnghe.net/images/logo.png">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="http://taxicongnghe.net">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Taxi Công Nghệ">
     <meta property="og:description" content="">
-    <meta property="og:image" content="http://taxicongnghe.net/images/logo.jpg">
+    <meta property="og:image" content="http://taxicongnghe.net/images/logo.png">
 
     <!-- end meta data SEO -->
     <link rel="icon shortcut" href="public/images/favicon.ico">
@@ -41,7 +41,7 @@
                         <i class="fa fa-times times"></i>
                     </a>
                     <a href="/" class="logo">
-                        <img src="public/images/logo.jpg" alt="Hợp Tác Xã GrabCar | Taxi Công Nghệ">
+                        <img src="public/images/logo.png" alt="Hợp Tác Xã GrabCar | Taxi Công Nghệ">
                     </a>
                     <nav class="nav-menu">
                         <ul>
@@ -137,10 +137,14 @@
 
         </section>
         <section class="block-intro">
-            <div class="container">
-                <div class="row">
+                <div class="d-flex">
                     <div class="left">
-                        <h2 class="main-color">CHƯƠNG TRÌNH ĐĂNG KÝ GRABCAR TẠI CẦN Thơ</h2>
+                        <figure class="text-center">
+                            <img src="public/images/Screenshot-2019-04-26-at-2.52.41-PM.png" alt="CHƯƠNG TRÌNH ĐĂNG KÝ GRABCAR TẠI HCM">
+                        </figure>
+                    </div>
+                    <div class="right">
+                        <h2 class="main-color">CHƯƠNG TRÌNH ĐĂNG KÝ GRABCAR TẠI CẦN THƠ</h2>
                         <P>Là chương trình hỗ trợ các Bác tài đăng ký Hợp tác xã xin Phù hiệu Xe hợp đồng để hoàn tất thủ tục đăng ký hoạt động Grab Car khu vực TP. HCM và các tỉnh lân cận</P>
                         <P class="text-danger"><strong>Phí đăng ký HTX chi phí bao gồm:</strong></p>
                             <ul>
@@ -152,13 +156,7 @@
                                 <li><img src="public/images/icon-list.svg" alt="null">Logo nhận diện Hợp tác xã</li>
                             </ul>
                     </div>
-                    <div class="right">
-                        <figure class="text-center">
-                            <img src="public/images/woman-girl-smile-registration.jpg" alt="CHƯƠNG TRÌNH ĐĂNG KÝ GRABCAR TẠI HCM">
-                        </figure>
-                    </div>
                 </div>
-            </div>
         </section>
         <section class="block-intro2">
             <div class="container">
@@ -190,8 +188,8 @@
                     </div>
                     <div class="col-md-12 col-xs-12 step mb-5 --spec">
                         <p class="text-center"><img src="public/images/step1.png" alt=""></p>
-                        <h3 class="main-color">BƯỚC 3</h3>
-                        <p>Chuẩn bị đầy đủ giấy tờ cần thiết như sau và thông báo xác nhận trong 24h để được hỗ trợ kích hoạt tài khoản.</p>
+                        <h3 class="main-color text-center">BƯỚC 3</h3>
+                        <p class="text-center">Chuẩn bị đầy đủ giấy tờ cần thiết như sau và thông báo xác nhận trong 24h để được hỗ trợ kích hoạt tài khoản.</p>
                         <h4>1.Chứng minh nhân dân</h4>
                         <figure>
                             <img src="public/images/3-cmnd-hoac-the-can-cuoc-cong-dan.jpg" alt="Chứng minh nhân dân">
@@ -387,7 +385,7 @@
                             <img src="" alt="">
                         </figure>
                         <h3 id="cont3">
-                            <span>200</span>+
+                            <span>200+</span>
                             khách hàng mỗi tháng
                         </h3>   
                     </div>
@@ -509,7 +507,7 @@
             <div class="row">
                 <div class="col-md-4 col-xs-12">
                     <figure>
-                        <img src="public/images/logo.jpg" alt="Taxi Công Nghệ">
+                        <img src="public/images/logo.png" alt="Taxi Công Nghệ">
                     </figure>
                     <h4>Hợp Tác Xã Hoàng Long</h4>
                     <p>54/20 Diệp Minh Châu, P.Tân Sơn Nhì, Q.Tân Phú</p>
